--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -53,7 +53,7 @@
 
       <ul>
 		  <li>
-          <div class="dropdown">ITI6880-Individual Study, Spring 2025
+          <div class="dropdown">ITIS6880-Individual Study, Spring 2025
             <div class="dropdown-content">
               <p class="border"><strong><em>Course Description.</em></strong> 
                 With the direction of a faculty member, students plan and implement 
