--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -83,7 +83,7 @@
         </li>-->
 
         <li>
-          <div class="dropdown">ITIS3300-Software Requirements and Project Management, Fall 2024 <!--[<a href="../teaching/current_courses/fall_24/ITIS.3300-Syllabus.pdf" target="_blank">Course Syllabus</a>] [<a href="../teaching/current_courses/fall_24/ITIS.3300-CourseSchedulePlan.pdf" target="_blank">Course Schedule and Plan</a>]-->
+          <div class="dropdown">ITIS3300-Software Requirements and Project Management, Fall 2024 [<a href="../teaching/current_courses/fall_24/ITIS.3300-Syllabus.pdf" target="_blank">Course Syllabus</a>] [<a href="../teaching/current_courses/fall_24/ITIS.3300-CourseSchedulePlan.pdf" target="_blank">Course Schedule and Plan</a>]
             <div class="dropdown-content">
               <p class="border"><strong><em>Course Description.</em></strong> 
                 Introduction to requirement engineering and project management 
