--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -64,7 +64,7 @@
         </li>
 		  
          <li>
-          <div class="dropdown">ITIS6010/8010-Software Engineering for AI-Enabled Systems, Spring 2025 [<a href="../teaching/current_courses/spring_25/ITIS.6010-8010-Syllabus.pdf" target="_blank">Course Syllabus</a>] [<a href="../teaching/current_courses/spring_25/ITIS.6010-8010-CourseSchedulePlan.pdf" target="_blank">Course Schedule and Plan</a>]
+          <div class="dropdown">ITIS6010/8010-Software Engineering for AI-Enabled Systems, Spring 2025 [<a href="../teaching/current_courses/spring_25/ITIS.4880-Syllabus.pdf" target="_blank">Course Syllabus</a>] [<a href="../teaching/current_courses/spring_25/ITIS.4880-CourseSchedulePlan.pdf" target="_blank">Course Schedule and Plan</a>]
             <div class="dropdown-content">
               <p class="border"><strong><em>Course Description.</em></strong> 
                 This course bridges software engineering and AI development, focusing 
