--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -52,32 +52,13 @@
     <strong><font color="005035">Instructor</font></strong><br><br>
 
       <ul>
-		  <li>
-          <div class="dropdown">ITIS6880-Individual Study, Spring 2025
+         <li>
+          <div class="dropdown">ITIS4010-Individual Study, Spring 2025 [<a href="../teaching/current_courses/spring_25/ITIS.4880-Syllabus.pdf" target="_blank">Course Syllabus</a>] [<a href="../teaching/current_courses/spring_25/ITIS.4880-CourseSchedulePlan.pdf" target="_blank">Course Schedule and Plan</a>]
             <div class="dropdown-content">
               <p class="border"><strong><em>Course Description.</em></strong> 
                 With the direction of a faculty member, students plan and implement 
-				        appropriate objectives and learning activities to develop specific 
-				        areas of expertise through research, reading, and individual projects.</p>
-            </div>
-          </div>
-        </li>
-		  
-         <li>
-          <div class="dropdown">ITIS6010/8010-Software Engineering for AI-Enabled Systems, Spring 2025 [<a href="../teaching/current_courses/spring_25/ITIS.4880-Syllabus.pdf" target="_blank">Course Syllabus</a>] [<a href="../teaching/current_courses/spring_25/ITIS.4880-CourseSchedulePlan.pdf" target="_blank">Course Schedule and Plan</a>]
-            <div class="dropdown-content">
-              <p class="border"><strong><em>Course Description.</em></strong> 
-                This course bridges software engineering and AI development, focusing 
-                on key aspects such as understanding AI model requirements and constraints, 
-                strategically planning AI component integration within AI-enabled systems,
-                and ensuring responsible and reliable development using machine and deep 
-                learning techniques. It emphasizes the role of software architecture and 
-                quality assurance in maintaining robust models beyond accuracy across 
-                various development stages while mitigating the effects of data drift. 
-                The course also highlights the importance of explainability and interpretability, 
-                moving beyond the traditional "black box" view of AI models. Additionally, students 
-                will gain hands-on experience with real-world scenarios, including debugging, 
-                design considerations, and thorough system-level testing.</p>
+                appropriate objectives and learning activities to develop specific 
+                areas of expertise through research, reading, and individual projects.</p>
             </div>
           </div>
         </li>
