--- a/talks/talks.html
+++ b/talks/talks.html
@@ -47,6 +47,18 @@
 		
       <h3>Talks</h3><br>
 		
+	  <p class="border">"Open Challenges in NLP for NFRs: A Focus on Semantics, Generalization, and Interpretability"</p>
+      &nbsp; &#9657; Presented at the 8th Workshop on Natural Language Processing for Requirements Engineering (<a target="_blank" title="NLP4RE'25" href="https://nlp4re.github.io/2025/">NLP4RE'25</a>), Apri 7<sup>th</sup>, Barcelona, Spain, 2025<br>
+      &nbsp; &#9657; <a target="_blank" title="Talk-NLP4RE'25" href="https://drive.google.com/file/d/1WluUgKDDtogRj0KBCZWV8Z_73mPMTKM2/view?usp=sharing">[Presentation Slides]</a>
+		
+      <center>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/Lq3FZgwV6r8?si=lRwW8L_EGRcyMfoH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </center>
+		
+      <br>
+      <br>
+
+		
       <p class="border">"A Hierarchical Topical Modeling Approach for Recommending Repair of Quality Bugs"</p>
       &nbsp; &#9657; Presented at the 30<sup>th</sup> IEEE International Conference on Software Analysis, Evolution and Reengineering (<a target="_blank" title="SANER'23" href="https://saner2023.must.edu.mo/index">SANER'23</a>), March 23<sup>rd</sup>, Macao, China, 2023<br>
       &nbsp; &#9657; <a target="_blank" title="Talk-SANER'23" href="https://drive.google.com/file/d/1b0tXkutNQkLpCoQSBn6gJTLyrX0ZGlKI/view?usp=share_link">[Presentation Slides]</a>
