--- a/talks/talks.html
+++ b/talks/talks.html
@@ -48,7 +48,7 @@
       <h3>Talks</h3><br>
 		
 	  <p class="border">"Open Challenges in NLP for NFRs: A Focus on Semantics, Generalization, and Interpretability"</p>
-      &nbsp; &#9657; Presented at the 8th Workshop on Natural Language Processing for Requirements Engineering (<a target="_blank" title="NLP4RE'25" href="https://nlp4re.github.io/2025/">NLP4RE'25</a>), Apri 7<sup>th</sup>, Barcelona, Spain, 2025<br>
+      &nbsp; &#9657; Presented at the 8<sup>th</sup> Workshop on Natural Language Processing for Requirements Engineering (<a target="_blank" title="NLP4RE'25" href="https://nlp4re.github.io/2025/">NLP4RE'25</a>), Apri 7 <sup>th</sup>, Barcelona, Spain, 2025<br>
       &nbsp; &#9657; <a target="_blank" title="Talk-NLP4RE'25" href="https://drive.google.com/file/d/1WluUgKDDtogRj0KBCZWV8Z_73mPMTKM2/view?usp=sharing">[Presentation Slides]</a>
 		
       <center>
