--- a/service/service.html
+++ b/service/service.html
@@ -50,6 +50,7 @@
     
       <ul>
         <li><em>Reviewer</em>, Empirical Software Engineering Journal (EMSE)</li>
+        <li><em>Reviewer</em>, Transactions on Software Engineering and Methodology (TOSEM)</li>
         <li><em>Reviewer</em>, Journal of Systems and Software (JSS)</li>
         <li><em>Reviewer</em>, Software Quality Journal (SQJ)</li>
         <li><em>Reviewer</em>, Journal for Software: Evolution and Process (JSEP)</li>
