--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="title"><h4 align="center">Contact Information</h4></div>
 
       <p class="blocktext"><a href="index.html" title="Rrezarta Krasniqi">
-      <img src="images/krasniqi_rrezarta_cropped.png" alt="Rrezarta Krasniqi" style="width: 180px; height: 200px;"/></a></p>
+      <img src="images/krasniqi.png" alt="Rrezarta Krasniqi" style="width: 180px; height: 200px;"/></a></p>
       <p class="blocktext">Assistant Professor of Software Engineering</p>
       <p class="blocktext">
           <strong>E-mail</strong>: rrezarta.krasniqi@charlotte.edu<br>
