--- a/service/service.html
+++ b/service/service.html
@@ -101,7 +101,7 @@
       <strong><font color="005035">Outreach and Leadership</font></strong><br><br>
     
       <ul>
-        <li><em>New Faculty Mentoring</em>, Center for Advancing Faculty Success, UNC Charlotte</li>
+        <li><em>New Faculty Mentoring</em>, Center for Advancing Faculty Success, UNC Charlotte (2024-2025)</li>
         <li><em>Student Volunteer</em>, Texas CSTA Chapters Conference and Digital Divas, UNT (2021-2023)</li>
         <li><em>Activity Instructor</em>, Design Your World STEM Conference for Girls, SWE-Dallas (2021-2023)</li>
         <li><em>Coding Instructor</em>, South Bend Code School (K13-K18) (2020-2021)</li>
