--- a/service/service.html
+++ b/service/service.html
@@ -60,18 +60,23 @@
       <strong><font color="005035">Invited Program Committee</font></strong><br><br>
     
       <ul>
-
         <li><em>PC Member (Research Track)</em>, International Conference on Software Engineering (ICSE'26)</li>
         <li><em>PC Member (Research Track)</em>, International Conference on Software Maintenance and Evolution (ICSME'25)</li>
         <li><em>PC Member (Research Track)</em>, International Conference on Software Architecture (ICSA'25)</li>
-        <li><em>PC Member (Research Track)</em>, International Conference on Evaluation and Assessment in Software Engineering (EASE'23-EASE'25)</li> 
+        <li><em>PC Member (Research Track)</em>, International Conference on Evaluation and Assessment in Software Engineering (EASE'25)</li> 
+        <li><em>PC Member (Workshop Track)</em>, International Workshop on Reliable and Secure AI for Software Engineering (ReSAISE'25)</li>
         <li><em>PC Member (Tool Demonstration Track)</em>, International Symposium on Software Testing and Analysis (ISSTA'25)</li>
         <li><em>PC Member (Tool Demonstration Track)</em>, International Joint Conference (ISSTA'24/ECOOP'24)</li>
         <li><em>PC Member (Artifact Evaluation Track)</em>, International Conference on Software Engineering (ICSE'24)</li>
         <li><em>PC Member (Research Track)</em>, International Conference on Software Analysis, Evolution and Reengineering (SANER'24)</li>
-        <li><em>PC Member (Research and Experience Track)</em>, International Conference on Software Engineering for Artificial Intelligence (CAIN'23-CAIN'24)</li>
-        <li><em>PC Member (Research Track)</em>, International Conference on Mobile Software Engineering and Systems (MOBILESoft'22-MOBILESoft'23)</li>
-        <li><em>PC Member (Junior PC Track)</em>, International Conference on Mining Software Repositories (MSR'22-MSR'23)</li>
+        <li><em>PC Member (Research and Experience Track)</em>, International Conference on Software Engineering for Artificial Intelligence (CAIN'24)</li>
+        <li><em>PC Member (Research Track)</em>, International Conference on Evaluation and Assessment in Software Engineering (EASE'24)</li> 
+        <li><em>PC Member (Research and Experience Track)</em>, International Conference on Software Engineering for Artificial Intelligence (CAIN'23)</li>
+        <li><em>PC Member (Research Track)</em>, International Conference on Evaluation and Assessment in Software Engineering (EASE'23)</li> 
+        <li><em>PC Member (Research Track)</em>, International Conference on Mining Software Repositories (MSR'23)</li>
+        <li><em>PC Member (Research Track)</em>, International Conference on Mobile Software Engineering and Systems (MOBILESoft'23)</li>
+        <li><em>PC Member (Research Track)</em>, International Conference on Mobile Software Engineering and Systems (MOBILESoft'22)</li>
+        <li><em>PC Member (Junior PC Track)</em>, International Conference on Mining Software Repositories (MSR'22)</li>
       </ul>
     
       <strong><font color="005035">Invited Organizing Committee</font></strong><br><br>
