--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -71,7 +71,7 @@
         </li>
 		  
         <li>
-          <div class="dropdown">ITIS 3300-Software Requirements, Analysis and Testing | Sec 002 | Fall 2025 [<a href="../teaching/current_courses/fall_25/ITIS.3300-CourseSchedulePlan-Sec.002.pdf" target="_blank">Course Syllabus</a>] [<a href="../teaching/current_courses/fall_25/ITIS.3300-Syllabus-Sec.002.pdf" target="_blank">Course Schedule and Plan</a>]
+          <div class="dropdown">ITIS 3300-Software Requirements, Analysis and Testing | Sec 002 | Fall 2025 [<a href="../teaching/current_courses/fall_25/ITIS.3300-Syllabus-Sec.002.pdf" target="_blank">Course Syllabus</a>] [<a href="../teaching/current_courses/fall_25/ITIS.3300-CourseSchedulePlan-Sec.002.pdf" target="_blank">Course Schedule and Plan</a>]
             <div class="dropdown-content">
               <p class="border"><strong><em>Course Description.</em></strong> 
                 This course explores managing, developing, and validating software requirements that lead to compliant software designs and implementations. Students will learn to elicit, analyze, specify, and verify both functional and non-functional requirements using best practices and project risk management tools. Students will gain hands-on experience in developing software requirements models, specifications, and conduct verification and validation. By the end of the course, students will be able to translate high-level system requirements into detailed software specifications, implement effective testing strategies, and ensure the final software product meets all specified requirements.</p>
