--- a/service/service.html
+++ b/service/service.html
@@ -63,6 +63,7 @@
         <li><em>PC Member (Research Track)</em>, International Conference on Software Engineering (ICSE'26)</li>
         <li><em>PC Member (Research Track)</em>, International Conference on Software Analysis, Evolution and Reengineering (SANER'26)</li>
         <li><em>PC Member (Research Track)</em>, International Conference Conference on Software Architecture (ICSA'26)</li>
+        <li><em>PC Member (Research Track)</em>, International Conference on Evaluation and Assessment in Software Engineering (EASE'26)</li> 
         <li><em>PC Member (Education Track)</em>, International Conference on the Foundations of Software Engineering (FSE'26)</li>
         <li><em>PC Member (Research Track)</em>, International Conference on Software Maintenance and Evolution (ICSME'25)</li>
         <li><em>PC Member (Research Track)</em>, International Conference on Software Architecture (ICSA'25)</li>
