--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -53,7 +53,7 @@
 
       <ul>
 		   <li>
-          <div class="dropdown">ITIS\ITCS\DSBA 6010\8010-Software Engineering for AI-Enabled Systems, Fall 2025 [<a href="../teaching/current_courses/fall_25/ITIS.ITCS.DSBA.6010.8010-Syllabus.pdf" target="_blank">Course Syllabus</a>] [<a href="../teaching/current_courses/fall_25/ITIS.ITCS.DSBA.6010.8010-CourseSchedulePlan.pdf" target="_blank">Course Schedule and Plan</a>]
+          <div class="dropdown">ITIS\ITCS\DSBA 6010\8010-Software Engineering for AI-Enabled Systems, Fall 2025
             <div class="dropdown-content">
               <p class="border"><strong><em>Course Description.</em></strong> 
                 This course bridges software engineering and AI development, focusing on key aspects such as understanding AI model requirements and constraints, strategically planning AI component integration within AI-enabled systems, and ensuring responsible and reliable development using machine and deep learning techniques. It emphasizes the role of software architecture and quality assurance in maintaining robust models beyond accuracy across various development stages while mitigating the effects of data drift. The course also highlights the importance of explainability and interpretability, moving beyond the traditional "black box" view of AI models. Additionally, students will gain hands-on experience with real-world scenarios, including debugging, design considerations, and thorough system-level testing.</p>
@@ -62,16 +62,7 @@
         </li>
 		  
 		   <li>
-          <div class="dropdown">ITIS 3300-Software Requirements, Analysis and Testing | Sec 001 | Fall 2025 [<a href="../teaching/current_courses/fall_25/ITIS.3300-Syllabus-Sec.001.pdf" target="_blank">Course Syllabus</a>] [<a href="../teaching/current_courses/fall_25/ITIS.3300-CourseSchedulePlan-Sec.001.pdf" target="_blank">Course Schedule and Plan</a>]
-            <div class="dropdown-content">
-              <p class="border"><strong><em>Course Description.</em></strong> 
-                This course explores managing, developing, and validating software requirements that lead to compliant software designs and implementations. Students will learn to elicit, analyze, specify, and verify both functional and non-functional requirements using best practices and project risk management tools. Students will gain hands-on experience in developing software requirements models, specifications, and conduct verification and validation. By the end of the course, students will be able to translate high-level system requirements into detailed software specifications, implement effective testing strategies, and ensure the final software product meets all specified requirements.</p>
-            </div>
-          </div>
-        </li>
-		  
-        <li>
-          <div class="dropdown">ITIS 3300-Software Requirements, Analysis and Testing | Sec 002 | Fall 2025 [<a href="../teaching/current_courses/fall_25/ITIS.3300-Syllabus-Sec.002.pdf" target="_blank">Course Syllabus</a>] [<a href="../teaching/current_courses/fall_25/ITIS.3300-CourseSchedulePlan-Sec.002.pdf" target="_blank">Course Schedule and Plan</a>]
+          <div class="dropdown">ITIS 3300-Software Requirements, Analysis and Testing | Sec 001 | Sec 002 | Fall 2025
             <div class="dropdown-content">
               <p class="border"><strong><em>Course Description.</em></strong> 
                 This course explores managing, developing, and validating software requirements that lead to compliant software designs and implementations. Students will learn to elicit, analyze, specify, and verify both functional and non-functional requirements using best practices and project risk management tools. Students will gain hands-on experience in developing software requirements models, specifications, and conduct verification and validation. By the end of the course, students will be able to translate high-level system requirements into detailed software specifications, implement effective testing strategies, and ensure the final software product meets all specified requirements.</p>
