--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -52,6 +52,16 @@
     <strong><font color="005035">Instructor</font></strong><br><br>
 
       <ul>
+
+        <li>
+          <div class="dropdown">ITIS 3300-Software Requirements, Analysis and Testing [<a href="current_courses/spring_26/ITIS.3300-Syllabus.pdf">Course Syllabus</a>] [<a href="current_courses/spring_26/ITIS.3300-CourseSchedulePlan.pdf">Course Schedule</a>], Fall 2025, Spring 2026
+            <div class="dropdown-content">
+              <p class="border"><strong><em>Course Description.</em></strong> This course explores managing, developing, and validating software requirements that lead to compliant software designs and implementations. Students will learn to elicit, analyze, specify, and verify both functional and non-functional requirements using best practices and project risk management tools. Students will gain hands-on experience in developing software requirements models, specifications, and conduct verification and validation. By the end of the course, students will be able to translate high-level system requirements into detailed software specifications, implement effective testing strategies, and ensure the final software product meets all specified requirements.</p>
+            </div>
+          </div>
+        </li>
+
+
 		   <li>
           <div class="dropdown">ITIS\ITCS\DSBA 6010\8010-Software Engineering for AI-Enabled Systems, Fall 2025
             <div class="dropdown-content">
@@ -61,14 +71,6 @@
           </div>
         </li>
 		  
-		   <li>
-          <div class="dropdown">ITIS 3300-Software Requirements, Analysis and Testing | Sec 001 | Sec 002 | Fall 2025
-            <div class="dropdown-content">
-              <p class="border"><strong><em>Course Description.</em></strong> 
-                This course explores managing, developing, and validating software requirements that lead to compliant software designs and implementations. Students will learn to elicit, analyze, specify, and verify both functional and non-functional requirements using best practices and project risk management tools. Students will gain hands-on experience in developing software requirements models, specifications, and conduct verification and validation. By the end of the course, students will be able to translate high-level system requirements into detailed software specifications, implement effective testing strategies, and ensure the final software product meets all specified requirements.</p>
-            </div>
-          </div>
-        </li>
 		  
 		  <li>
           <div class="dropdown">ITIS 6080-Individual Study, Spring 2025
