--- a/service/service.html
+++ b/service/service.html
@@ -61,13 +61,14 @@
       <strong><font color="005035">Invited Program Committee</font></strong><br><br>
     
       <ul>
+        <li><em>PC Member (Research Track)</em>, International Conference on Software Engineering (ICSE'27)</li>
         <li><em>PC Member (Research Track)</em>, International Conference on Software Engineering (ICSE'26)</li>
         <li><em>PC Member (Research Track)</em>, International Conference on Software Analysis, Evolution and Reengineering (SANER'26)</li>
         <li><em>PC Member (Research Track)</em>, International Conference Conference on Software Architecture (ICSA'26)</li>
         <li><em>PC Member (Research Track)</em>, International Conference on Evaluation and Assessment in Software Engineering (EASE'26)</li> 
         <li><em>PC Member (IVR Track)</em>, International Conference on the Foundations of Software Engineering (FSE'26)</li>
         <li><em>PC Member (Education Track)</em>, International Conference on the Foundations of Software Engineering (FSE'26)</li>
-        <li><em>PC Member (Workshop Track)</em>, International Workshop on AI Code Quality, Integrity and Reliability (ACQUIRE'26)</li>
+        <li><em>PC Member (Workshop Track)</em>, International Conference on Dependable Systems and Networks Workshops (DSN-W'26)</li>
         <li><em>PC Member (Research Track)</em>, International Conference on Software Maintenance and Evolution (ICSME'25)</li>
         <li><em>PC Member (Research Track)</em>, International Conference on Software Architecture (ICSA'25)</li>
         <li><em>PC Member (Research Track)</em>, International Conference on Evaluation and Assessment in Software Engineering (EASE'25)</li> 
